# SignalProcessingToolkit

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  project.yml
common/: callback.h  defs.h
cspline/: cspline.c  cspline.h
emd/: emd.c  emd.h
examples/: emd.c  matrix.c  run_example.h
imf/: imf.c  imf.h
kalman/: kalman.c  kalman.h
matrix/: matrix.c  matrix.h
perf/conformation/: run.c  support.h
point2d/: point2d.h
tests/cspline/: Test_cspline.c
tests/emd/: Test_emd.c
tests/imf/: Test_imf.c
tests/matrix/: Test_matrix.c
tests/mocks/cspline/: Mock_cspline.h
tests/mocks/imf/: Mock_imf.h
tests/mocks/utils/binarysearch/: Mock_binarysearch.h
tests/mocks/utils/peakdetect/: Mock_peakdetect.h
tests/mocks/utils/valleydetect/: Mock_valleydetect.h
tests/mocks/vector/: Mock_vector.h
tests/utils/binarysearch/: Test_binarysearch.c
tests/utils/peakdetect/: Test_peakdetect.c
tests/utils/valleydetect/: Test_valleydetect.c
tests/vector/: Test_vector.c
tests/vector2d/: Test_vector2d.c
utils/binarysearch/: binarysearch.c  binarysearch.h
utils/peakdetect/: peakdetect.c  peakdetect.h
utils/valleydetect/: valleydetect.c  valleydetect.h
vector/: vector.c  vector.h
vector2d/: vector2d.c  vector2d.h
